Fix for delayed sound on mobile
- potential fix for delayed tile sound on mobile

--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ h1 {
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    max-width: 370px;
+    max-width: 360px;
     height: 430px;
     padding-left: 15px;
     padding-right: 15px;
